# parameter-estimation-for-differential-equations

./: .gitignore  README.md  setup.cfg
data/: covid19_sir.csv
notebooks/: 01_lorenz_system_pinn.ipynb  02_lorenz_system_kalmanfilter.ipynb  03_sir_model_pinn.ipynb  04_sir_model_kalmanfilter.ipynb  05_covid19_pinn.ipynb  06_covid19_kalmanfilter.ipynb  07_comparison.ipynb  08_plot_comparison.ipynb
src/: data.py  kalmanfilter.py  pinn.py  visualisation.py
