[metadata]
name = parameterestimationfordifferentialequations
version = 1.0.0
author = Janik Raue
description = Contains the source code of my Masters thesis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jupyter
    click
    tqdm
    joblib
    numpy
    pandas
    matplotlib
    scikit-learn>=1.0
    deepxde>=1.1.3
    torch


[options.packages.find]
where = src